src/test/deca/context/valid/sansObjet/ModuloCompilation.deca
{
    int x = 2020;
    int y = 2050;
    int z = 2050 % 2020;
    print("z= ",z);
}