src/test/deca/context/invalid/sansObjet/BadComparaison1.deca
{
    String x;
    if (x == "Hello"){
        println("2020");
    }
}
